made <nav> a flex container with conted justified with space-around and items aligned t center

--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,7 @@ h1, h2, h3, ul, p{
 }
 .header-links{
     padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
