--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,11 @@ h1, h2, h3, ul, p{
 a{
     text-decoration: none;
 }
+header{
+    padding: 30px;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+}
