--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,8 @@ header{
     border: 4px solid #3382f6;
     border-radius: 4px;
 }
+h1{
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+}
