--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,11 @@ header{
     border: 4px solid #3382f6;
     border-radius: 4px;
 }
+.image{
+    background-color: #e5e7eb;
+    padding: 100px 120px;
+    text-align: center;
+}
 h1{
     font-size: 48px;
     font-weight: extra-bold;
