on .info, aligned text to center, set font size and weight, added color and padding

--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,10 @@ button{
 main{
     background-color: white;
 }
+.info{
+    text-align: center;
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1f2937;
+    padding: 30px;
+}
