--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,9 @@ main{
     color: #1f2937;
     padding: 30px;
 }
+.in-box{
+    width: 120px;
+    height: 120px;
+    border: 3px solid #3382f6;
+    border-radius: 10px;
+}
