made .middle a flex box, justified content to center, set gap, padding of 30px and padding-bottom of 100px

--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,10 @@ main{
     font-size: 19px;
     color: #1f2937;
 }
+.middle{
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    padding: 30px;
+    padding-bottom: 100px;
+}
