--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,9 @@ main{
     padding: 30px;
     padding-bottom: 100px;
 }
+/*----------------------------------------------------*/
+blockquote{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: light;
+}
