added background-color, height, width, and text color to .end div

--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,9 @@ cite{
     padding: 50px;
     background-color: white;
 }
+.end{
+    background-color: #3382f6;
+    height: 100px;
+    width: 750px;
+    color: #F9FAF8;
+}
