aligned text of footer to center and gave footer a padding of 40px

--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,8 @@ cite{
     justify-content: space-around;
     align-items: center;
 }
+/*--------------------------------------------------*/
+footer{
+    text-align: center;
+    padding: 40px;
+}
