added some space between <cite> and quote paragraph with padding-bottom on <p> tag

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,9 @@ blockquote{
     font-style: italic;
     font-weight: light;
 }
+blockquote>p{
+    padding-bottom: 12px;
+}
 cite{
     font-size: 20px;
 }
